# fontio

./: .gitignore  CMakeLists.txt  LICENSE  README.md
project/vs_2015/: fontio.sln  fontio.vcxproj  fontio.vcxproj.filters  fontio_wm8.vcxproj  fontio_wm8.vcxproj.filters  fontio_wp8.vcxproj.filters
src/fontio/infrastructure/: ByteIo.hpp
src/fontio/logic/cff/: CffReader.hpp
src/fontio/logic/otf/: OtfFromCffConverter.hpp
src/fontio/logic/type2/: IType2Context.hpp  Type2CharstringReader.hpp  Type2CharstringReaderState.hpp  Type2GlyphMetricsCalculator.hpp  Type2GlyphMetricsContext.hpp  Type2OperatorExecutor.hpp  Type2SubroutineAccessor.hpp
src/fontio/model/: AdobeGlyphList.cpp  AdobeGlyphList.hpp  AdobeStandardEncoding.cpp  AdobeStandardEncoding.hpp  BoundBox.hpp  GlyphMetrics.hpp  IEncoding.hpp  MacRomanEncoding.cpp  MacRomanEncoding.hpp  PdfDocEncoding.cpp  PdfDocEncoding.hpp  Point2.hpp  UtfEncoding.cpp  UtfEncoding.hpp  WinAnsiEncoding.cpp  WinAnsiEncoding.hpp
src/fontio/model/cff/: Cff.hpp  CffBoundBox.hpp  CffCharset.hpp  CffCharsetType.hpp  CffCharstringFormat.hpp  CffCustomCharset.hpp  CffDict.hpp  CffFontMatrix.hpp  CffHeader.hpp  CffIndex.hpp  CffIsoAdobeCharset.hpp  CffNameIndex.hpp  CffObject.hpp  CffOperatorType.hpp  CffPrivateDict.hpp  CffStandardStrings.hpp  CffStringIndex.hpp  CffTopDict.hpp  CffType2Charstring.hpp  CffType2Charstrings.hpp  ICffCharset.hpp  (+2 more)
test_data/cff/: bare.cff  iso_adobe_charset.cff  symbol.cff  test_8.cff  test_font_3.cff  test_font_6.cff  test_font_7.cff  test_font_8.cff  test_font_width.cff
test_data/otf/: cff.ttx
(+27 files in other folders)
